add user login/ loguot / current routes
