# backend/swagger.json
@@ -9,6 +9,9 @@
       "url": "https://opensource.org/licenses/MIT"
     }
   },
+  "consumes": ["application/json", "multipart/form-data"],
+	"produces": ["application/json"],
+  
   "servers": [
     {
       "url": "http://localhost:4000/api"
@@ -75,6 +78,101 @@
               }
             }
           } 
+        }
+      }
+    },
+    "/auth/login": {
+      "post": {
+        "tags":["Auth"],
+        "summary": "User login",
+        "parameters":[],
+        "requestBody":{
+          "description": "Login object",
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/LoginRequest"
+              }
+            }
+          } 
+        },
+        "responses": {
+          "200": {
+            "description": "Ok",
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/LoginResponse"
+              }
+            }
+          }
+          },
+          "404": {
+            "description": "Not found",
+            "content":{
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/LoginErrorResponse"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad request",
+            "content":{
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/LoginBadRequestResponse"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/auth/logout": {
+      "post": {
+        "tags":["Auth"],
+        "summary": "User logout",
+        "parameters":[],
+        "security": [{ "Bearer": [] }],
+        "requestBody":{},
+        "responses": {
+          "204": {
+            "description": "No content"
+          }
+        }
+      }
+    },
+    "/auth/current": {
+      "get": {
+        "tags":["Auth"],
+        "summary": "Get current User's data",
+        "parameters":[],
+        "security": [{ "Bearer": [] }],
+        "requestBody":{},
+        "responses": {
+          "200": {
+            "description": "Ok",
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/CurrentResponse"
+              }
+            }
+          }
+          },
+          "401": {
+            "description": "Unauthorized",
+            "content":{
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/CurrentUnauthorizedResponse"
+                }
+              }
+            }
+          }
         }
       }
     },
@@ -290,26 +388,27 @@
             "type": "string",
 						"description": "User's name",
             "pattern": "/^[a-zA-Zа-яА-ЯЇїІіЄєҐґ]*$/",
-						"example": "Марина"
+						"example": "Олена"
           },
           "surname": {
             "type": "string",
 						"description": "User's surname",
             "pattern": "/^[a-zA-Zа-яА-ЯЇїІіЄєҐґ]*$/",
-						"example": "Озкара"
+						"example": "Шевченко"
           },
           "phone": {
             "type": "string",
 						"description": "User's phone",
+            "pattern": "/^d{9}$/",
             "minLength": "9",
-            "example": "961556362"
+            "example": "961456789"
           },
           "email": {
             "type": "string",
 						"description": "User's email",
 						"format": "email",
 						"pattern": "/^w+@[a-zA-Z_]+?.[a-zA-Z]{2,3}$/",
-            "example": "ozkaramaryna@gmail.com"
+            "example": "shevchenko@gmail.com"
           },
           "password": {
             "type": "string",
@@ -317,49 +416,69 @@
 						"minLength": "8",
 						"maxLength": "16",
             "pattern": "/^(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z])(?=.*[!#$%*()_]).{8,}$/",
-						"example": "Qwerty123$"
+						"example": "Qwerty123!"
           }
         }
       },
       "RegistrationResponse": {
         "type": "object",
         "properties": {
+          "status": {
+            "type": "number",
+            "description": "Response status",
+            "example": "201"
+          },
+          "message": {
+            "type": "string",
+            "description": "Response message",
+            "example": "User registered succesfull"
+          },
           "token": {
             "type": "string",
 						"required": true,
 						"description": "User's authentitication token",
-            "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6IjY1ZTc5NmU2ZmNkNDllZjYzMTUyNWVkMSIsImlhdCI6MTcwOTY3NjI2MiwiZXhwIjoxNzA5NzYyNjYyfQ.hcCWfCluBf92kCsNif8_hlMGFHPIBWom_QOsahAosq4"
+            "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6IjY1ZWNiZDBkNWFkZTZmMTdlNWEwNTNjOSIsImlhdCI6MTcxMDAxMzcwOSwiZXhwIjoxNzEwMTAwMTA5fQ.ZPubtr4yCTy01Lh1D8hlp6gzJtJYqKuxBtsnj47GE2w"
           },
-          "name": {
-            "type": "string",
-						"description": "User's name",
-						"example": "Марина"
-          },
-          "surname":{
-            "type": "string",
-						"description": "User's surname",
-						"example": "Озкара"
-          },
-          "email":{
-            "type": "string",
-						"description": "User's email",
-						"example": "ozkaramaryna@gmail.com"
-          },
-          "phone":{
-            "type": "string",
-						"description": "User's phone",
-            "example": "961556362"
-          },
-          "role": {
-            "type": "string",
-            "description": "User permition",
-            "example": "customer"
-          },
-          "subscription": {
-            "type": "string",
-            "description": "User status",
-            "example": "beginner"
-          }
+          "data":{
+            "type": "object",
+            "properties": {
+              "id": {
+                "type":"string",
+                "description": "User's ID",
+                "example": "65ecbd0d5ade6f17e5a053c9"
+              },
+              "name": {
+                "type": "string",
+                "description": "User's name",
+                "example": "Олена"
+              },
+              "surname":{
+                "type": "string",
+                "description": "User's surname",
+                "example": "Шевченко"
+              },
+              "email":{
+                "type": "string",
+                "description": "User's email",
+                "example": "shevchenko@gmail.com"
+              },
+              "phone":{
+                "type": "string",
+                "description": "User's phone",
+                "example": "961456789"
+              },
+              "role": {
+                "type": "string",
+                "description": "User permition",
+                "example": "customer"
+              },
+              "subscription": {
+                "type": "string",
+                "description": "User status",
+                "example": "beginner"
+              }
+            }
+          } 
         }
       },
       "RegistrationErrorResponse": {
@@ -377,6 +496,160 @@
 					"message": {
 						"type": "string",
 						"example": "Bad request (invalid request body)"
+					}
+				}
+      },
+      "LoginRequest": {
+        "type": "object",
+        "required": ["email", "password"],
+        "properties": {
+          "email": {
+            "type": "string",
+						"description": "User's email",
+						"format": "email",
+						"pattern": "/^w+@[a-zA-Z_]+?.[a-zA-Z]{2,3}$/",
+            "example": "shevchenko@gmail.com"
+          },
+          "password": {
+            "type": "string",
+						"description": "User's password",
+						"minLength": "8",
+						"maxLength": "16",
+            "pattern": "/^(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z])(?=.*[!#$%*()_]).{8,}$/",
+						"example": "Qwerty123!"
+          }
+        }
+      },
+      "LoginResponse": {
+        "type": "object",
+        "properties": {
+          "status": {
+            "type": "number",
+            "description": "Response status",
+            "example": "200"
+          },
+          "message": {
+            "type": "string",
+            "description": "Response message",
+            "example": "Login successfull"
+          },
+          "token": {
+            "type": "string",
+						"required": true,
+						"description": "User's authentitication token",
+            "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6IjY1ZWNiZDBkNWFkZTZmMTdlNWEwNTNjOSIsImlhdCI6MTcxMDAxNDU0NCwiZXhwIjoxNzEwMTAwOTQ0fQ.A2gEKlIpSBm52XuAuYMCnPH8x7ElPGSNlFI1ZY7Iz7M"
+          },
+          "data":{
+            "type": "object",
+            "properties": {
+              "id": {
+                "type":"string",
+                "description": "User's ID",
+                "example": "65ecbd0d5ade6f17e5a053c9"
+              },
+              "name": {
+                "type": "string",
+                "description": "User's name",
+                "example": "Олена"
+              },
+              "surname":{
+                "type": "string",
+                "description": "User's surname",
+                "example": "Шевченко"
+              },
+              "email":{
+                "type": "string",
+                "description": "User's email",
+                "example": "shevchenko@gmail.com"
+              },
+              "phone":{
+                "type": "string",
+                "description": "User's phone",
+                "example": "961456789"
+              },
+              "role": {
+                "type": "string",
+                "description": "User permition",
+                "example": "customer"
+              },
+              "subscription": {
+                "type": "string",
+                "description": "User status",
+                "example": "beginner"
+              }
+            }
+          } 
+        }
+      },
+      "LoginErrorResponse": {
+        "type": "object",
+				"properties": {
+					"message": {
+						"type": "string",
+						"example": "User does not exist"
+					}
+				}
+      },
+      "LoginBadRequestResponse": {
+        "type": "object",
+				"properties": {
+					"message": {
+						"type": "string",
+						"example": "Please fill in all required fields"
+					}
+				}
+      },
+      "CurrentResponse": {
+        "type": "object",
+        "properties": {
+          "data":{
+            "type": "object",
+            "properties": {
+              "id": {
+                "type":"string",
+                "description": "User's ID",
+                "example": "65ecbd0d5ade6f17e5a053c9"
+              },
+              "name": {
+                "type": "string",
+                "description": "User's name",
+                "example": "Олена"
+              },
+              "surname":{
+                "type": "string",
+                "description": "User's surname",
+                "example": "Шевченко"
+              },
+              "email":{
+                "type": "string",
+                "description": "User's email",
+                "example": "shevchenko@gmail.com"
+              },
+              "phone":{
+                "type": "string",
+                "description": "User's phone",
+                "example": "961456789"
+              },
+              "role": {
+                "type": "string",
+                "description": "User permition",
+                "example": "customer"
+              },
+              "subscription": {
+                "type": "string",
+                "description": "User status",
+                "example": "beginner"
+              }
+            }
+          } 
+        }
+      },
+      "CurrentUnauthorizedResponse": {
+        "type": "object",
+				"properties": {
+					"message": {
+						"type": "string",
+						"example": "Unauthorized"
 					}
 				}
       },
@@ -507,6 +780,13 @@
           }
         }
       }
+    },
+    "securitySchemes": {
+      "Bearer": {
+        "type": "http",
+        "scheme": "bearer",
+        "bearerFormat": "JWT"
+      }
     }
-  }
+  } 
 }
